--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.profiles.include=oauth,real-db
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.session.store-type=jdbc
+spring.profiles.include=oauth
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mariadb:firstproject-webservice.crrb5akokraa.ap-northeast-2.rds.amazonaws.com:3306/firstproject-webservice
+spring.datasource.username=leegh
+spring.datasource.password=1q2w#E$R
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
