--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.profiles.include=oauth
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mariadb:firstproject-webservice.crrb5akokraa.ap-northeast-2.rds.amazonaws.com:3306/firstproject-webservice
-spring.datasource.username=leegh
-spring.datasource.password=1q2w#E$R
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.profiles.include=real-oauth
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.h2.console.enabled=true
+spring.session.store-type=jdbc
